* (bug 8711) Stop floats in previews from spilling into edit area with toolbar disabled.  Doesn't seem to happen on most browsers anyway, but no harm in adding an extra clear for any it might work that way on.

--- a/skins/chick/main.css
+++ b/skins/chick/main.css
@@ -489,6 +489,7 @@ div.gallerytext {
  * Here is some stuff that's ACTUALLY COMMON TO ALL SKINS.
  * When the day comes, it can be moved to a *real* common.css.
  */
-#toolbar { clear: both; }
 .mw-plusminus-null { color: #aaa; }
 .texvc { direction: ltr; unicode-bidi: embed; }
+/* Stop floats from intruding into edit area in previews */
+#toolbar, #wpTextbox1 { clear: both; }
