--- a/skins/common/common.css
+++ b/skins/common/common.css
@@ -463,6 +463,7 @@ p.mw-ipb-conveniencelinks {
  * Here is some stuff that's ACTUALLY COMMON TO ALL SKINS.
  * When the day comes, it can be moved to a *real* common.css.
  */
-#toolbar { clear: both; }
 .mw-plusminus-null { color: #aaa; }
 .texvc { direction: ltr; unicode-bidi: embed; }
+/* Stop floats from intruding into edit area in previews */
+#toolbar, #wpTextbox1 { clear: both; }
